--- a/package.json
+++ b/package.json
@@ -11,15 +11,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.6",
+    "@angular/animations": "^9.1.11",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.6",
     "@angular/compiler": "~9.1.6",
     "@angular/core": "~9.1.6",
     "@angular/forms": "~9.1.6",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
+    "@auth0/angular-jwt": "^4.0.0",
+    "angular2-flash-messages": "^3.0.1",
+    "angular2-jwt": "^0.2.3",
+    "eva-icons": "^1.1.2",
+    "jquery": "^3.5.1",
+    "ngx-slick": "^0.2.1",
+    "ngx-slick-carousel": "^0.5.0",
+    "ngx-swiper-wrapper": "^9.0.1",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.5.5",
+    "slick-carousel": "^1.8.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
@@ -27,9 +40,10 @@
     "@angular-devkit/build-angular": "~0.901.5",
     "@angular/cli": "~9.1.5",
     "@angular/compiler-cli": "~9.1.6",
-    "@types/node": "^12.11.1",
+    "@schematics/angular": "~9.1.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
